<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:elevation="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".addedit.AddEditItemFragment"
    android:background="@color/colorItemAddEditBackground"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/itemAddEditContent"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemAddEditAppBarLayout"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/itemViewScrollView"
        app:liftOnScrollColor="@color/colorTitleBar"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/itemAddEditMaterialToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_button_24dp"
            app:title="Add/Edit Item"
            app:titleMarginBottom="10dp"
            app:menu="@menu/ab_item_add_edit_bar"
            style="@style/Widget.Material3.Toolbar"

            android:paddingBottom="3dp"
            >

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="?actionBarSize"
        android:id="@+id/itemAddEditScrollView"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemAddEditConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="80dp">
            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateMake"
                android:hint="Make"
                app:helperText="@string/required_field_text"
                app:helperTextTextColor="@color/colorRequired"
                app:errorEnabled="true"
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/makeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:maxLines="1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/updateMake"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateModel"
                android:hint="Model"
                app:helperText="@string/required_field_text"
                app:helperTextTextColor="@color/colorRequired"
                app:errorEnabled="true"
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modelEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:maxLines="1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/updateModel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateValue"
                android:hint="Estimated Value"
                app:helperText="@string/required_field_text"
                app:helperTextTextColor="@color/colorRequired"
                app:errorEnabled="true"
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/valueEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/updateValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateSN"
                android:hint="Serial Number"
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                android:paddingBottom="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/snEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:maxLines="1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/updateSN"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateDesc"
                android:hint="Description"
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                android:paddingBottom="20dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage|textCapSentences">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/updateDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateComment"
                android:hint="Comment"
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                android:paddingBottom="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage|textCapSentences">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/updateComment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateDate"
                android:hint="mm/dd/yyyy"
                app:helperText="*mm/dd/yyyy"
                app:helperTextTextColor="@color/colorRequired"
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                >

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"

                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/updateDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateTags"
                app:helperTextTextColor="@color/colorRequired"
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                android:hint="Add Tag"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tagEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 \n"
                    >

                </com.google.android.material.textfield.TextInputEditText>

                <HorizontalScrollView
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/updateTags"
                    android:visibility="visible"
                    >
                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/itemAddEditChipGroup"
                        app:singleLine="true"
                        android:animateLayoutChanges="true"
                        >

                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/addEditImageRecycler"
                app:layout_constraintTop_toBottomOf="@id/updateTags"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:visibility="visible"
                
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                >

            </androidx.recyclerview.widget.RecyclerView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:id="@+id/updateItemConfirm"
        android:backgroundTint="@color/colorButton"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_gravity="bottom|center_horizontal"
        android:textColor="@color/colorConfirmButtonText"
        android:layout_marginBottom="30dp">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



